--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                     <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde suscipit natus, iure deleniti ex recusandae fugit. Ratione blanditiis iste corrupti at quas! Saepe quas ducimus dolores quam possimus est eveniet.
                     </p><br>
                     <a href="https://ppdb.bpi.web.id/1/f?p=300:1::::::" target="blank" class="btn btn-warning rounded-pill">Daftar PPDB Online</a>
+		<div>&nbsp;</div>
                 </div>
                 <div class="col-md-6">
                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
