--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="container">
             <div class="row text-center mb-3">
                 <div class="col">
-                    <h2 class="fw-bold text-white">Kegiatan</h2>
+                    <h2 class="fw-bold text-white">Kegiatan Unggulan</h2>
                 </div>
             </div>
             <div class="row">
@@ -192,15 +192,15 @@
                     <form name="portofolio-presensi">
                         <div class="mb-3">
                           <label for="name" class="form-label">Nama Lengkap</label>
-                          <input type="text" class="form-control" id="name" aria-describedby="name" name="nama">
+                          <input type="text" class="form-control" id="name" aria-describedby="name" name="nama" required>
                         </div>
                         <div class="mb-3">
                             <label for="kelas" class="form-label">Kelas</label>
-                            <input type="kelas" class="form-control" id="kelas" aria-describedby="kelas" name="kelas">
+                            <input type="kelas" class="form-control" id="kelas" aria-describedby="kelas" name="kelas" required>
                         </div>
                         <div class="mb-3">
                             <label for="hadir" class="form-label">Kehadiran (*isi dengan Hadir)</label>
-			    <input type="hadir" class="form-control" id="hadir" aria-describedby="hadir" name="kehadiran">
+			    <input type="hadir" class="form-control" id="hadir" aria-describedby="hadir" name="kehadiran" required>
                         </div>
                         <button type="submit" class="btn btn-danger btn-kirim">Kirim</button>
 
